@@ -30,6 +30,7 @@ addCommandAlias("build", "; fmt; coverage; root/test; coverageReport")
 addCommandAlias("fmt", "all root/scalafmtSbt root/scalafmtAll")
 addCommandAlias("fmtCheck", "all root/scalafmtSbtCheck root/scalafmtCheckAll")
 addCommandAlias("check", "; scalafmtSbtCheck; scalafmtCheckAll")
+addCommandAlias("lint", "check")
 addCommandAlias("mimaChecks", "all schemaJVM/mimaReportBinaryIssues")
 addCommandAlias(
   "testJVM",
@@ -54,6 +55,7 @@ lazy val root = project
   .settings(
     publish / skip := true
   )
+  .enablePlugins(ZioSbtCiPlugin)
   .aggregate(
     typeid.jvm,
     typeid.js,
@@ -492,6 +494,7 @@ lazy val examples = project
   .settings(
     publish / skip := true
   )
+  .enablePlugins(ZioSbtCiPlugin)
   .dependsOn(
     schema.jvm,
     markdown.jvm,
@@ -528,3 +531,32 @@ lazy val docs = project
     mediatype.jvm
   )
   .enablePlugins(WebsitePlugin)
+
+import zio.sbt.githubactions._
+
+import zio.sbt.githubactions.Step
+
+
+ThisBuild / ciJvmOptions := Seq("-Djava.locale.providers=CLDR,JRE")
+
+ThisBuild / ciPostReleaseJobs := {
+  import zio.sbt.githubactions._
+
+  def updateStep(step: Step): Step = step match {
+    case s: Step.SingleStep if s.name == "Publish Docs to NPM Registry" =>
+      s.copy(env = s.env + ("NODE_AUTH_TOKEN" -> "${{ secrets.NPM_TOKEN }}"))
+    case s: Step.StepSequence =>
+      val updatedSteps = s.steps.map(updateStep)
+      s.copy(steps = updatedSteps)
+    case other => other
+  }
+
+  (ThisBuild / ciPostReleaseJobs).value.map { job =>
+    if (job.id == "release-docs") {
+      val updatedSteps = job.steps.map(updateStep)
+      job.copy(steps = updatedSteps)
+    } else {
+      job
+    }
+  }
+}
